# mesonlsp

./: .clang-format  .clang-tidy  .gitignore  .pre-commit-config.yaml  .swift-format  .swiftlint.yml  CHANGELOG.md  CMakeLists.txt  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  Dockerfile  Dockerfile.clang  Dockerfile.debianStable  Dockerfile.debianTesting  Dockerfile.debianUnstable  Dockerfile.fedora38  Dockerfile.ubuntu  Dockerfile.ubuntu1804  Dockerfile.ubuntu2004  FAILING.md  Makefile  PROGRESS.md  Package.resolved  Package.swift  README.md  RELEASING.md  SECURITY.md  Swift-MesonLSP.spec  codecov.yml  collect_coverage.sh  collect_perf_data.py  create_license_bundle.sh  do_meson_tests.sh  install.sh  meson.build  meson.options  mesonlsp.spec  run_regression_tests.sh  run_wrap_tests.bat  (+2 more)
.ci/: sed.vbs
Sources/LanguageServer/: DeclarationFinder.swift  DefinitionFinder.swift  DocumentSymbolCollector.swift  FileMapper.swift  FoldingRangeVisitor.swift  Formatting.swift  Highlighter.swift  HoverInformationCollector.swift  InlayHints.swift  InlayHintsCollector.swift  LanguageServer.swift  MesonServer.swift  NodeCounter.swift  SemanticTokenVisitor.swift  StatsCollector.swift  meson.build
Sources/LanguageServer/CodeActions/: CodeActionProvider.swift  CodeActionState.swift  CodeActionVisitor.swift  CopyFileCodeActionProvider.swift  DeclareDependency.swift  DownloadFromWrapDBCodeAction.swift  IntegerToBase.swift  LibraryToGeneric.swift  MainTreeCodeActionProvider.swift  Shared.swift  SharedLibraryToModule.swift  SharedModuleToLibrary.swift  SortFilenames.swift  SortFilenamesAndIdentifersSAI.swift  (+2 more)
Sources/MesonAST/: CodeVisitor.swift  MesonSourceFile.swift  NodeToAst.swift  TypeNamespace.swift  Utils.swift  meson.build
Sources/MesonAnalyze/: ASTPatcher.swift  AnalysisOptions.swift  DeclarationFinder.swift  DeprecationState.swift  Diagnostic.swift  ExtendedCodeVisitor.swift  HighlightSearcher.swift  MemoryFile.swift  MesonMetadata.swift  MesonOption.swift  MesonTree.swift  MultiSubdirCall.swift  OptionDiagnosticVisitor.swift  OptionState.swift  OptionsExtractor.swift  Scope.swift  SetVariableGuess.swift  SubdirCall.swift  Symbol.swift  SymbolVisitor.swift  TypeAnalyzer.swift  TypeFlow.swift  TypeJar.swift  TypeNamespace.swift  Version.swift  meson.build
Sources/MesonDocs/: BoolDocProvider.swift  BuildMachineDocProvider.swift  CMakeDocProvider.swift  CudaDocProvider.swift  DictDocProvider.swift  DlangDocProvider.swift  DocProvider.swift  ExternalProjectDocProvider.swift  FsDocProvider.swift  FunctionDocProvider.swift  GnomeDocProvider.swift  HostMachineDocProvider.swift  HotdocDocProvider.swift  I18nDocProvider.swift  IcestormDocProvider.swift  IntDocProvider.swift  JavaDocProvider.swift  KeyvalDocProvider.swift  ListDocProvider.swift  MesonDocProvider.swift  MesonDocs.swift  ObjectDocProvider.swift  PkgconfigDocProvider.swift  PythonDocProvider.swift  QtDocProvider.swift  RustDocProvider.swift  SimdDocsProvider.swift  SourceSetDocProvider.swift  StrDocProvider.swift  TargetMachineDocsProvider.swift  WaylandDocProvider.swift  WindowsDocProvider.swift  meson.build
Sources/Swift-MesonLSP/: DotVisitor.swift  MesonLSP.swift  meson.build
Sources/TestingFramework/: AssertionCheck.swift  ErrorAssertionCheck.swift  FileParser.swift  TestRunner.swift  VariableTypeAssertionCheck.swift  WarningAssertionCheck.swift  meson.build
Sources/Wrap/: Decompression.swift  FileWrap.swift  GitWrap.swift  HgWrap.swift  Provides.swift  SvnWrap.swift  VcsWrap.swift  Wrap.swift  WrapDB.swift  WrapError.swift  WrapFileParser.swift  meson.build
TestCases/BasicTests/: meson.build
TestCases/ComputeSetVariable/: meson.build  meson.options
TestCases/ComputeSubdirs/: meson.build
TestCases/Options/: meson.build  meson_options.txt
src/: MesonParser.cpp  README.md  Utils.cpp  WrapHandler.cpp  main.cpp  main.rs  meson.build  vcs_version.h.in
src/ast/: mod.rs
src/benchmarks/: benchmark.cpp  lexing.cpp  meson.build  parsing.cpp
src/libanalyze/: analysisoptions.hpp  meson.build  mesonmetadata.hpp  mesontree.cpp  mesontree.hpp
src/libast/: ini.cpp  ini.hpp  location.cpp  location.hpp  meson.build  node.cpp  node.hpp  sourcefile.cpp  sourcefile.hpp
src/libcxathrow/: backtrace_execinfo.cpp  backtrace_libunwind.cpp  backtrace_null.cpp  backtrace_stacktrace.cpp  handle_darwin_clang.cpp  handle_linux_clang.cpp  handle_linux_gcc.cpp  handle_linux_static_clang.cpp  handle_linux_static_gcc.cpp  meson.build  shared.cpp  shared.hpp
src/libjsonrpc/: jsonrpc.cpp  jsonrpc.hpp  meson.build
src/liblangserver/: codeactionvisitor.cpp  codeactionvisitor.hpp  completion.cpp  completion.hpp  documentsymbolvisitor.cpp  documentsymbolvisitor.hpp  foldingrangevisitor.cpp  foldingrangevisitor.hpp  formatting.cpp  formatting.hpp  hover.cpp  hover.hpp  inlayhintvisitor.cpp  inlayhintvisitor.hpp  langserver.cpp  langserver.hpp  langserveroptions.hpp  langserverutils.hpp  meson.build  muon_fmt_hack.c  semantictokensvisitor.cpp  semantictokensvisitor.hpp  task.cpp  task.hpp  workspace.cpp  workspace.hpp
src/liblog/: log.cpp  log.hpp  meson.build
src/libls/: ls.cpp  ls.hpp  meson.build
src/liblsptypes/: lsptypes.cpp  lsptypes.hpp  meson.build
src/libobjects/: argument.cpp  argument.hpp  deprecationstate.hpp  function.cpp  function.hpp  meson.build  type.hpp  version.hpp
src/libparsing/: lexer.cpp  lexer.hpp  lexerstats.cpp  lexingtool.cpp  meson.build  parser.cpp  parser.hpp  parserbench.cpp  parserstats.cpp  parsingtool.cpp
src/libtypenamespace/: addedData.csv  deprecations.csv  functiondocs.def  functions.def  genfunctions.py  genmethods.py  genobjectdocs.py  meson.build  methoddocs.def  methods.def  objectdocs.def  shared.py  typenamespace.cpp  typenamespace.hpp
src/libutils/: meson.build  utils.cpp  utils.hpp
src/libwrap/: filewrap.cpp  gitwrap.cpp  hgwrap.cpp  meson.build  svnwrap.cpp  utils.cpp  utils.hpp  vcswrap.cpp  wrap.cpp  wrap.hpp
src/lint/: linter.cpp  linter.hpp  lintingconfig.cpp  lintingconfig.hpp  main.cpp  meson.build
src/polyfill/: meson.build  polyfill.hpp
src/wrap/: mod.rs
(+514 files in other folders)
