[package]
name = "mesonlsp_tester"
version = "0.1.0"
edition = "2021"

[dependencies]
async-lsp = { git = "https://github.com/oxalica/async-lsp", features = ["default", "omni-trait"] }
lsp-types = "0.94.0"
tokio = { version = "1.27.0", features = ["io-std", "io-util", "macros", "process", "rt", "time"] }
tower = "0.4.13"
tracing-subscriber = "0.3.16"
tracing = { version = "0.1.37" }
