[package]
name = "swift_mesonlsp_tests"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-lsp = "0.0.4"
tokio = { version = "1.27.0", features = ["io-std", "io-util", "macros", "process", "rt", "time"] }
tower = "0.4.13"
tracing-subscriber = "0.3.16"
tracing = "0.1.37"
lsp-types = "0.94.0"
futures = "0.3.28"
