[package]
#[warn(non_snake_case)]
name = "Swift-MesonLSP"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tower-lsp = "0.20.0"
reqwest = "0.11.22"
tree-sitter = "0.20.10"
rust-crypto = "0.2.36"
clap = { version = "4.4.7", features = ["derive"] }
tree-sitter-meson = { git = "https://github.com/JCWasmx86/tree-sitter-meson.git", branch = "main" }

[build-dependencies]
cc="*"
