swifttreesitter_proj = subproject('swifttreesitter')
swifttreesitter_lib = swifttreesitter_proj.get_variable('swifttreesitter_lib')
tree_sitter_dep = swifttreesitter_proj.get_variable('tree_sitter_dep')

mesonast_lib = static_library(
    'MesonAST',
    'Types/Modules/CMake/CMakeModule.swift',
    'Types/Modules/CMake/CMakeSubproject.swift',
    'Types/Modules/CMake/CMakeSubprojectOptions.swift',
    'Types/Modules/CMake/CMakeTarget.swift',
    'Types/Modules/FS/FSModule.swift',
    'Types/Modules/I18N/I18nModule.swift',
    'Types/Modules/GNOME/GNOMEModule.swift',
    'Types/Modules/Rust/RustModule.swift',
    'Types/Modules/Python/PythonInstallation.swift',
    'Types/Modules/Python/PythonModule.swift',
    'Types/Modules/Python3/Python3Module.swift',
    'Types/Modules/Pkgconfig/PkgconfigModule.swift',
    'Types/Modules/Keyval/KeyvalModule.swift',
    'Types/Modules/Dlang/DlangModule.swift',
    'Types/Modules/ExternalProject/ExternalProject.swift',
    'Types/Modules/ExternalProject/ExternalProjectModule.swift',
    'Types/Modules/Hotdoc/HotdocModule.swift',
    'Types/Modules/Hotdoc/HotdocTarget.swift',
    'Types/Modules/Java/JavaModule.swift',
    'Types/Modules/Windows/WindowsModule.swift',
    'Types/Modules/Cuda/CudaModule.swift',
    'Types/Modules/Icestorm/IcestormModule.swift',
    'Types/Modules/Qt/Qt4Module.swift',
    'Types/Modules/Qt/Qt5Module.swift',
    'Types/Modules/Qt/Qt6Module.swift',
    'Types/Modules/Wayland/WaylandModule.swift',
    'Types/Modules/SIMD/SIMDModule.swift',
    'Types/Modules/SourceSet/SourceSet.swift',
    'Types/Modules/SourceSet/SourceSetModule.swift',
    'Types/Modules/SourceSet/SourceFiles.swift',
    'Types/BuiltinTypes/AliasTgt.swift',
    'Types/BuiltinTypes/BothLibs.swift',
    'Types/BuiltinTypes/BuildTgt.swift',
    'Types/BuiltinTypes/CfgData.swift',
    'Types/BuiltinTypes/Compiler.swift',
    'Types/BuiltinTypes/CustomIdx.swift',
    'Types/BuiltinTypes/CustomTgt.swift',
    'Types/BuiltinTypes/Dep.swift',
    'Types/BuiltinTypes/Disabler.swift',
    'Types/BuiltinTypes/Env.swift',
    'Types/BuiltinTypes/Exe.swift',
    'Types/BuiltinTypes/ExternalProgram.swift',
    'Types/BuiltinTypes/ExtractedObj.swift',
    'Types/BuiltinTypes/Feature.swift',
    'Types/BuiltinTypes/File.swift',
    'Types/BuiltinTypes/GeneratedList.swift',
    'Types/BuiltinTypes/Generator.swift',
    'Types/BuiltinTypes/Inc.swift',
    'Types/BuiltinTypes/Jar.swift',
    'Types/BuiltinTypes/Lib.swift',
    'Types/BuiltinTypes/Module.swift',
    'Types/BuiltinTypes/Range.swift',
    'Types/BuiltinTypes/RunResult.swift',
    'Types/BuiltinTypes/RunTgt.swift',
    'Types/BuiltinTypes/StructuredSrc.swift',
    'Types/BuiltinTypes/Tgt.swift',
    'Types/BuiltinTypes/Subproject.swift',
    'Nodes/FunctionExpression.swift',
    'Nodes/BooleanLiteral.swift',
    'Nodes/Location.swift',
    'Nodes/StringLiteral.swift',
    'Nodes/IdExpression.swift',
    'Nodes/BreakNode.swift',
    'Nodes/ContinueNode.swift',
    'Nodes/SubscriptExpression.swift',
    'Nodes/ErrorNode.swift',
    'Nodes/MethodExpression.swift',
    'Nodes/ConditionalExpression.swift',
    'Nodes/SelectionStatement.swift',
    'Nodes/ArrayLiteral.swift',
    'Nodes/SourceFile.swift',
    'Nodes/ArgumentList.swift',
    'Nodes/KeywordItem.swift',
    'Nodes/KeyValueItem.swift',
    'Nodes/DictionaryLiteral.swift',
    'Nodes/Node.swift',
    'Nodes/BuildDefinition.swift',
    'Nodes/BinaryExpression.swift',
    'Nodes/AssignmentStatement.swift',
    'Nodes/UnaryExpression.swift',
    'Nodes/IterationStatement.swift',
    'Nodes/IntegerLiteral.swift',
    'FunctionDescription/PositionalArgument.swift',
    'FunctionDescription/Kwarg.swift',
    'FunctionDescription/Argument.swift',
    'FunctionDescription/Method.swift',
    'FunctionDescription/Function.swift',
    'Types/Any.swift',
    'Types/BoolType.swift',
    'Types/BuildMachine.swift',
    'Types/Dict.swift',
    'Types/HostMachine.swift',
    'Types/IntType.swift',
    'Types/List.swift',
    'Types/Meson.swift',
    'Types/Str.swift',
    'Types/TargetMachine.swift',
    'Types/Type.swift',
    'CodeVisitor.swift',
    'MesonSourceFile.swift',
    'NodeToAst.swift',
    'TypeNamespace.swift',
    'Utils.swift',
    link_with: [
        ioutils_lib,
        swifttreesitter_lib,
    ],
    dependencies: tree_sitter_dep,
)
mesonast_dep = declare_dependency(
    link_with: [
        mesonast_lib,
        ioutils_lib,
        swifttreesitter_lib,
    ],
    dependencies: tree_sitter_dep,
)
