tree_sitter_meson_dep = subproject(
    'treesittermeson',
).get_variable('tree_sitter_meson_dep')

mesonanalyze_lib = static_library(
    'MesonAnalyze',
    'Checkers/Checker.swift',
    'Checkers/BuildTgtPathCheck.swift',
    'Checkers/DepGetConfigToolVariableCheck.swift',
    'Checkers/DepGetPkgConfigToolVariableCheck.swift',
    'Checkers/ExternalProgramPathCheck.swift',
    'Checkers/InstallSubdirCheck.swift',
    'Checkers/MesonBuildRootCheck.swift',
    'Checkers/MesonGetCrossPropertyCheck.swift',
    'Checkers/MesonHasExeWrapperCheck.swift',
    'Checkers/MesonSourceRootCheck.swift',
    'Checkers/GuiAppKwargCheck.swift',
    'Checkers/BuildAlwaysKwargCheck.swift',
    'Checkers/CheckerState.swift',
    'TypeAnalyzers/MesonTypeAnalyzer.swift',
    'TypeAnalyzers/DictGetTypeAnalyzer.swift',
    'TypeAnalyzers/ListGetTypeAnalyzer.swift',
    'TypeAnalyzers/SubprojectGetVariableTypeAnalyzer.swift',
    'TypeAnalyzers/OptionTypeAnalyzer.swift',
    'TypeAnalyzers/BuildTargetTypeAnalyzer.swift',
    'TypeAnalyzers/ImportTypeAnalyzer.swift',
    'TypeAnalyzers/TypeAnalyzersState.swift',
    'Subproject/WrapBasedSubproject.swift',
    'Subproject/Subproject.swift',
    'Subproject/CachedSubproject.swift',
    'Subproject/FolderSubproject.swift',
    'Subproject/SubprojectState.swift',
    'Subproject/SubprojectError.swift',
    'ASTPatcher.swift',
    'DeclarationFinder.swift',
    'Diagnostic.swift',
    'ExtendedCodeVisitor.swift',
    'HighlightSearcher.swift',
    'MemoryFile.swift',
    'MesonMetadata.swift',
    'MesonOption.swift',
    'MesonTree.swift',
    'MultiSubdirCall.swift',
    'OptionState.swift',
    'OptionsExtractor.swift',
    'Scope.swift',
    'SetVariableGuess.swift',
    'Shared.swift',
    'SubdirCall.swift',
    'Symbol.swift',
    'SymbolVisitor.swift',
    'TypeAnalyzer.swift',
    'Version.swift',
    dependencies: [
        logging_dep,
        mesonast_dep,
        wrap_dep,
        tree_sitter_meson_dep,
    ],
    link_with: timing_lib,
)
mesonanalyze_dep = declare_dependency(
    dependencies: [
        logging_dep,
        mesonast_dep,
        wrap_dep,
        tree_sitter_meson_dep,
    ],
    link_with: [
        timing_lib,
        mesonanalyze_lib,
    ],
)
