c = configure_file(
    copy: true,
    input: 'MesonDocs.swift',
    output: '_MesonDocs.swift',
)
mesondocs_lib = static_library(
    'MesonDocs',
    'DocProvider.swift',
    'BoolDocProvider.swift',
    'DictDocProvider.swift',
    'IntDocProvider.swift',
    'ListDocProvider.swift',
    'StrDocProvider.swift',
    'MesonDocProvider.swift',
    'ObjectDocProvider.swift',
    'Kwargs/BuiltinKwargDocProvider.swift',
    'Kwargs/ModuleKwargDocProvider.swift',
    'CMakeDocProvider.swift',
    'CudaDocProvider.swift',
    'DlangDocProvider.swift',
    'ExternalProjectDocProvider.swift',
    'FsDocProvider.swift',
    'GnomeDocProvider.swift',
    'HotdocDocProvider.swift',
    'I18nDocProvider.swift',
    'IcestormDocProvider.swift',
    'JavaDocProvider.swift',
    'KeyvalDocProvider.swift',
    'PkgconfigDocProvider.swift',
    'PythonDocProvider.swift',
    'QtDocProvider.swift',
    'RustDocProvider.swift',
    'SimdDocsProvider.swift',
    'SourceSetDocProvider.swift',
    'WaylandDocProvider.swift',
    'WindowsDocProvider.swift',
    'FunctionDocProvider.swift',
    'BuildMachineDocProvider.swift',
    c,
)

