c = configure_file(
    copy: true,
    input: 'MesonDocs.swift',
    output: '_MesonDocs.swift',
)
mesondocs_lib = static_library(
    'MesonDocs',
    c,
    'Kwargs/BuiltinKwargDocProvider.swift',
    'Kwargs/ModuleKwargDocProvider.swift',
    'BoolDocProvider.swift',
    'BuildMachineDocProvider.swift',
    'CMakeDocProvider.swift',
    'CudaDocProvider.swift',
    'DictDocProvider.swift',
    'DlangDocProvider.swift',
    'DocProvider.swift',
    'ExternalProjectDocProvider.swift',
    'FsDocProvider.swift',
    'FunctionDocProvider.swift',
    'GnomeDocProvider.swift',
    'HotdocDocProvider.swift',
    'I18nDocProvider.swift',
    'IcestormDocProvider.swift',
    'IntDocProvider.swift',
    'JavaDocProvider.swift',
    'KeyvalDocProvider.swift',
    'ListDocProvider.swift',
    'MesonDocProvider.swift',
    'ObjectDocProvider.swift',
    'PkgconfigDocProvider.swift',
    'PythonDocProvider.swift',
    'QtDocProvider.swift',
    'RustDocProvider.swift',
    'SimdDocsProvider.swift',
    'SourceSetDocProvider.swift',
    'StrDocProvider.swift',
    'WaylandDocProvider.swift',
    'WindowsDocProvider.swift',
)

